--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
   <h1 class="header">Helllo</h1>
   <p class="paragraph">Some lorem ipsum.</p>
+  <script src="script.js"></script>
 </body>
 </html>
